// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Microsoft Word word-safari-ios11 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -229,138 +229,138 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "eqer4",
-       "text": "	Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "3pnou",
-       "text": "	Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5il9v",
-       "text": "	Nested bulleted list (1)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2gqq9",
-       "text": "	Nested bulleted list (2)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "nd4u",
-       "text": "	Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "4ulr7",
-       "text": "	Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "8c82r",
-       "text": "	Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5c335",
-       "text": "	Nested numbered list (1)",
-       "type": "unstyled",
+       "text": "Nested numbered list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "aufce",
-       "text": "	Nested numbered list (2)",
-       "type": "unstyled",
+       "text": "Nested numbered list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "cj7i1",
-       "text": "	Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "8ffrd",
-       "text": "	Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bos6q",
-       "text": "	Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7f7ir",
-       "text": "	Nested star list (1)",
-       "type": "unstyled",
+       "text": "Nested star list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "c5aa1",
-       "text": "	Nested star list (2)",
-       "type": "unstyled",
+       "text": "Nested star list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "clqmi",
-       "text": "	Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -445,20 +445,20 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5fbd4",
-       "text": "row 1 col 1	row 1 col 2",
+       "text": "row 1 col 1 row 1 col 2",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5e28t",
-       "text": "row 2 col 1	row 2 col 2",
+       "text": "row 2 col 1 row 2 col 2",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
@@ -508,12 +508,12 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "acqk",
-       "text": "	Soft ",
-       "type": "unstyled",
+       "text": "Soft ",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -535,57 +535,57 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "45qp8",
-       "text": "	Double quote “test”",
-       "type": "unstyled",
+       "text": "Double quote “test”",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "4icne",
-       "text": "	Single quote ‘test’",
-       "type": "unstyled",
+       "text": "Single quote ‘test’",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "22nqi",
-       "text": "	Copyright © (( c ))",
-       "type": "unstyled",
+       "text": "Copyright © (( c ))",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "dm35q",
-       "text": "	Fractions ½ (1 / 2)",
-       "type": "unstyled",
+       "text": "Fractions ½ (1 / 2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5rkq",
-       "text": "	Arrows   (-- >, < --)",
-       "type": "unstyled",
+       "text": "Arrows   (-- >, < --)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "b1qsf",
-       "text": "	Ellipsis … (. . .)",
-       "type": "unstyled",
+       "text": "Ellipsis … (. . .)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -625,11 +625,11 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "c4d5u",
-       "text": "x=(-b±√(b^2-4ac))/2a	",
+       "text": "x=(-b±√(b^2-4ac))/2a ",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
`;

exports[`Microsoft Word word2010-chrome62-win81 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -32,11 +32,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2dc31",
        "text": "Inline styles",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -64,31 +64,20 @@
          Object {
            "length": 11,
            "offset": 24,
            "style": "ITALIC",
          },
-         Object {
-           "length": 13,
-           "offset": 37,
-           "style": "STRIKETHROUGH",
-         },
        ],
        "key": "e1kg4",
        "text": "Unstyled, bold, italic, bold italic, strikethrough, monospace, unstyled, bold monospace",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
-       "inlineStyleRanges": Array [
-         Object {
-           "length": 9,
-           "offset": 10,
-           "style": "UNDERLINE",
-         },
-       ],
+       "inlineStyleRanges": Array [],
        "key": "f3jvk",
        "text": "Unstyled, underline, bigger, smaller, superscript, subscript",
        "type": "unstyled",
      },
      Object {
@@ -99,15 +88,10 @@
          Object {
            "length": 7,
            "offset": 32,
            "style": "BOLD",
          },
-         Object {
-           "length": 20,
-           "offset": 53,
-           "style": "STRIKETHROUGH",
-         },
        ],
        "key": "d1736",
        "text": "Unstyled, red, text background, outline, small caps, double strikethrough, unstyled",
        "type": "unstyled",
      },
@@ -131,11 +115,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5s4am",
        "text": "Inline entities",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [
@@ -144,33 +128,18 @@
            "length": 4,
            "offset": 10,
          },
          Object {
            "key": 1,
-           "length": 10,
-           "offset": 16,
-         },
-         Object {
-           "key": 2,
            "length": 12,
            "offset": 28,
          },
          Object {
-           "key": 3,
-           "length": 13,
-           "offset": 42,
-         },
-         Object {
-           "key": 4,
+           "key": 2,
            "length": 10,
            "offset": 57,
          },
-         Object {
-           "key": 5,
-           "length": 6,
-           "offset": 76,
-         },
        ],
        "inlineStyleRanges": Array [],
        "key": "cnvhf",
        "text": "Unstyled, link, email link, tooltip link, internal link, frame link, comment[T.C1] ",
        "type": "unstyled",
@@ -178,19 +147,14 @@
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [
          Object {
-           "key": 6,
+           "key": 3,
            "length": 17,
            "offset": 10,
          },
-         Object {
-           "key": 7,
-           "length": 6,
-           "offset": 27,
-         },
        ],
        "inlineStyleRanges": Array [
          Object {
            "length": 17,
            "offset": 10,
@@ -206,11 +170,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bh960",
        "text": "Text blocks",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -260,11 +224,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "6nap5",
        "text": "h1 - Heading one",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -302,20 +266,20 @@
            "style": "BOLD",
          },
        ],
        "key": "adalk",
        "text": "h5 - heading five bold",
-       "type": "header-five",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "235sj",
        "text": "h6 - heading six",
-       "type": "header-six",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -346,156 +310,138 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bot74",
-       "text": "· Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "f3lfa",
-       "text": "· Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1rbt0",
-       "text": "o Nested bulleted list (1)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "4j3iu",
-       "text": "§ Nested bulleted list (2)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "poc6",
-       "text": "· Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "af8h",
-       "text": "1. Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1v06n",
-       "text": "2. Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "8e30i",
-       "text": "a. Nested numbered list (1)",
-       "type": "unstyled",
+       "text": "Nested numbered list (1)",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5k0d0",
-       "text": "i. Nested numbered list (2)",
-       "type": "unstyled",
+       "text": "Nested numbered list (2)",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7nb15",
-       "text": "3. Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 8,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "6umi7",
-       "text": "📷 Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 9,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "fonu3",
-       "text": "📷 Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "4qaq",
-       "text": "o Nested star list (1)",
-       "type": "unstyled",
+       "text": "Nested star list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1d0g7",
-       "text": "§ Nested star list (2)",
-       "type": "unstyled",
+       "text": "Nested star list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 10,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "nl29",
-       "text": "📷 Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -518,11 +464,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1l39f",
        "text": "Rich blocks",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -547,25 +493,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 11,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "ff9kg",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2oqmd",
        "text": "Caption",
        "type": "unstyled",
@@ -580,25 +511,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 12,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "8cu2j",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 5,
            "offset": 0,
@@ -728,21 +644,21 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "frsp9",
        "text": "Misc",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "eapfn",
-       "text": "· Soft 
+       "text": "Soft 
   line break",
-       "type": "unstyled",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -761,57 +677,57 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "fge5h",
-       "text": "· Double quote “test”",
-       "type": "unstyled",
+       "text": "Double quote “test”",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "9g29n",
-       "text": "· Single quote ‘test’",
-       "type": "unstyled",
+       "text": "Single quote ‘test’",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5epqj",
-       "text": "· Copyright © (( c ))",
-       "type": "unstyled",
+       "text": "Copyright © (( c ))",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "dkv6s",
-       "text": "· Fractions ½ (1 / 2)",
-       "type": "unstyled",
+       "text": "Fractions ½ (1 / 2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7beng",
-       "text": "· Arrows à ß (-- >, < --)",
-       "type": "unstyled",
+       "text": "Arrows à ß (-- >, < --)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2n603",
-       "text": "· Ellipsis … (. . .)",
-       "type": "unstyled",
+       "text": "Ellipsis … (. . .)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -840,11 +756,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "dvkpk",
        "text": "Embeds",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -860,32 +776,11 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 13,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "7ri7s",
-       "text": "📷 ",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 14,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 5,
            "offset": 1,
            "style": "BOLD",
@@ -911,25 +806,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 15,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "4t12b",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 5,
            "offset": 0,
@@ -941,25 +821,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 16,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "63vue",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 7,
            "offset": 0,
@@ -1004,17 +869,11 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 17,
-           "length": 6,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "f4vnr",
        "text": "[T.C1]Comment",
        "type": "unstyled",
      },
@@ -1028,186 +887,43 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 18,
-           "length": 6,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "6siqr",
        "text": "[T.C2]Comment",
        "type": "unstyled",
      },
    ],
    "entityMap": Object {
      "0": Object {
        "data": Object {
-         "href": "http://www.example.com",
          "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
      "1": Object {
        "data": Object {
-         "href": "mailto:test@example.com",
-         "url": "mailto:test@example.com",
+         "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
-     "10": Object {
-       "data": Object {
-         "alt": "*",
-         "height": "15",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image001.gif",
-         "width": "15",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "11": Object {
-       "data": Object {
-         "height": "171",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image002.jpg",
-         "width": "258",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "12": Object {
-       "data": Object {
-         "height": "326",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image004.png",
-         "width": "330",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "13": Object {
-       "data": Object {
-         "height": "39",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image006.png",
-         "width": "119",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "14": Object {
-       "data": Object {
-         "height": "97",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image007.png",
-         "width": "195",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "15": Object {
-       "data": Object {
-         "height": "145",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image009.png",
-         "width": "149",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "16": Object {
-       "data": Object {
-         "height": "156",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image011.png",
-         "width": "174",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "17": Object {
-       "data": Object {
-         "href": "#_msoanchor_1",
-         "url": "http://localhost/#_msoanchor_1",
-       },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
-     "18": Object {
-       "data": Object {
-         "href": "#_msoanchor_2",
-         "url": "http://localhost/#_msoanchor_2",
-       },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
      "2": Object {
        "data": Object {
-         "href": "http://www.example.com",
-         "title": "Test tooltip",
          "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
      "3": Object {
        "data": Object {
-         "href": "#_Inline_styles",
-         "url": "http://localhost/#_Inline_styles",
-       },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
-     "4": Object {
-       "data": Object {
-         "href": "http://www.example.com/",
          "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
-     "5": Object {
-       "data": Object {
-         "href": "#_msocom_1",
-         "url": "http://localhost/#_msocom_1",
    },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
-     "6": Object {
-       "data": Object {
-         "href": "http://www.example.com",
-         "url": "http://www.example.com/",
-       },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
-     "7": Object {
-       "data": Object {
-         "href": "#_msocom_2",
-         "url": "http://localhost/#_msocom_2",
-       },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
-     "8": Object {
-       "data": Object {
-         "alt": "*",
-         "height": "15",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image001.gif",
-         "width": "15",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "9": Object {
-       "data": Object {
-         "alt": "*",
-         "height": "15",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image001.gif",
-         "width": "15",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-   },
  }
`;

exports[`Microsoft Word word2010-firefox57-win81 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -32,11 +32,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1q29k",
        "text": "Inline styles",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -64,31 +64,20 @@
          Object {
            "length": 11,
            "offset": 24,
            "style": "ITALIC",
          },
-         Object {
-           "length": 13,
-           "offset": 37,
-           "style": "STRIKETHROUGH",
-         },
        ],
        "key": "1oott",
        "text": "Unstyled, bold, italic, bold italic, strikethrough, monospace, unstyled, bold monospace",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
-       "inlineStyleRanges": Array [
-         Object {
-           "length": 9,
-           "offset": 10,
-           "style": "UNDERLINE",
-         },
-       ],
+       "inlineStyleRanges": Array [],
        "key": "dsf8r",
        "text": "Unstyled, underline, bigger, smaller, superscript, subscript",
        "type": "unstyled",
      },
      Object {
@@ -99,15 +88,10 @@
          Object {
            "length": 7,
            "offset": 32,
            "style": "BOLD",
          },
-         Object {
-           "length": 20,
-           "offset": 53,
-           "style": "STRIKETHROUGH",
-         },
        ],
        "key": "4bfp4",
        "text": "Unstyled, red, text background, outline, small caps, double strikethrough, unstyled",
        "type": "unstyled",
      },
@@ -131,11 +115,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "e8e9s",
        "text": "Inline entities",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [
@@ -144,20 +128,15 @@
            "length": 4,
            "offset": 10,
          },
          Object {
            "key": 1,
-           "length": 10,
-           "offset": 16,
-         },
-         Object {
-           "key": 2,
            "length": 12,
            "offset": 28,
          },
          Object {
-           "key": 3,
+           "key": 2,
            "length": 10,
            "offset": 57,
          },
        ],
        "inlineStyleRanges": Array [],
@@ -168,11 +147,11 @@
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [
          Object {
-           "key": 4,
+           "key": 3,
            "length": 17,
            "offset": 10,
          },
        ],
        "inlineStyleRanges": Array [
@@ -191,11 +170,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "e5iim",
        "text": "Text blocks",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -245,11 +224,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "3c0mv",
        "text": "h1 - Heading one",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -287,20 +266,20 @@
            "style": "BOLD",
          },
        ],
        "key": "fujat",
        "text": "h5 - heading five bold",
-       "type": "header-five",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "fadoq",
        "text": "h6 - heading six",
-       "type": "header-six",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -331,156 +310,138 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bv6p5",
-       "text": "· Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "f7pu7",
-       "text": "· Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "8tu7k",
-       "text": "o Nested bulleted list (1)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "c7lrv",
-       "text": "§ Nested bulleted list (2)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "ci6l9",
-       "text": "· Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "arb7v",
-       "text": "1. Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "9ln9g",
-       "text": "2. Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "d316m",
-       "text": "a. Nested numbered list (1)",
-       "type": "unstyled",
+       "text": "Nested numbered list (1)",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "a1326",
-       "text": "i. Nested numbered list (2)",
-       "type": "unstyled",
+       "text": "Nested numbered list (2)",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1lnkq",
-       "text": "3. Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 5,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1vg1s",
-       "text": "📷 Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 6,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bm6p7",
-       "text": "📷 Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1eokn",
-       "text": "o Nested star list (1)",
-       "type": "unstyled",
+       "text": "Nested star list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "ari7p",
-       "text": "§ Nested star list (2)",
-       "type": "unstyled",
+       "text": "Nested star list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 7,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "b790t",
-       "text": "📷 Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -503,11 +464,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "1fi2m",
        "text": "Rich blocks",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -532,25 +493,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 8,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "440rg",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "82amn",
        "text": "Caption",
        "type": "unstyled",
@@ -565,25 +511,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 9,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "jtpm",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 5,
            "offset": 0,
@@ -713,21 +644,21 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2fbq0",
        "text": "Misc",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "fubns",
-       "text": "· Soft 
+       "text": "Soft 
   line break",
-       "type": "unstyled",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -746,57 +677,57 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bb3l",
-       "text": "· Double quote “test”",
-       "type": "unstyled",
+       "text": "Double quote “test”",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bcmjr",
-       "text": "· Single quote ‘test’",
-       "type": "unstyled",
+       "text": "Single quote ‘test’",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7744s",
-       "text": "· Copyright © (( c ))",
-       "type": "unstyled",
+       "text": "Copyright © (( c ))",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "f7kg0",
-       "text": "· Fractions ½ (1 / 2)",
-       "type": "unstyled",
+       "text": "Fractions ½ (1 / 2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "3gcqv",
-       "text": "· Arrows à ß (-- >, < --)",
-       "type": "unstyled",
+       "text": "Arrows à ß (-- >, < --)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "d02tn",
-       "text": "· Ellipsis … (. . .)",
-       "type": "unstyled",
+       "text": "Ellipsis … (. . .)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -825,11 +756,11 @@
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2cluc",
        "text": "Embeds",
-       "type": "header-one",
+       "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -845,32 +776,11 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 10,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "5tsng",
-       "text": "📷 ",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 11,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
+       "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 5,
            "offset": 1,
            "style": "BOLD",
@@ -896,25 +806,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 12,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "7tib8",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 5,
            "offset": 0,
@@ -926,25 +821,10 @@
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
-       "entityRanges": Array [
-         Object {
-           "key": 13,
-           "length": 1,
-           "offset": 0,
-         },
-       ],
-       "inlineStyleRanges": Array [],
-       "key": "813on",
-       "text": "📷",
-       "type": "unstyled",
-     },
-     Object {
-       "data": Object {},
-       "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [
          Object {
            "length": 7,
            "offset": 0,
@@ -1017,130 +897,33 @@
      },
    ],
    "entityMap": Object {
      "0": Object {
        "data": Object {
-         "href": "http://www.example.com",
          "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
      "1": Object {
        "data": Object {
-         "href": "mailto:test@example.com",
-         "url": "mailto:test@example.com",
+         "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
-     "10": Object {
-       "data": Object {
-         "height": "39",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image006.png",
-         "width": "119",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "11": Object {
-       "data": Object {
-         "height": "97",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image007.png",
-         "width": "195",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "12": Object {
-       "data": Object {
-         "height": "145",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image009.png",
-         "width": "149",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "13": Object {
-       "data": Object {
-         "height": "156",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image011.png",
-         "width": "174",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
      "2": Object {
        "data": Object {
-         "href": "http://www.example.com",
-         "title": "Test tooltip",
          "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
      "3": Object {
        "data": Object {
-         "href": "http://www.example.com/",
          "url": "http://www.example.com/",
        },
        "mutability": "MUTABLE",
        "type": "LINK",
      },
-     "4": Object {
-       "data": Object {
-         "href": "http://www.example.com",
-         "url": "http://www.example.com/",
    },
-       "mutability": "MUTABLE",
-       "type": "LINK",
-     },
-     "5": Object {
-       "data": Object {
-         "alt": "*",
-         "height": "15",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image001.gif",
-         "width": "15",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "6": Object {
-       "data": Object {
-         "alt": "*",
-         "height": "15",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image001.gif",
-         "width": "15",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "7": Object {
-       "data": Object {
-         "alt": "*",
-         "height": "15",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image001.gif",
-         "width": "15",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "8": Object {
-       "data": Object {
-         "height": "171",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image002.jpg",
-         "width": "258",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-     "9": Object {
-       "data": Object {
-         "height": "326",
-         "src": "file:///C:\\\\truncated\\\\msohtmlclip1\\\\01\\\\clip_image004.png",
-         "width": "330",
-       },
-       "mutability": "MUTABLE",
-       "type": "IMAGE",
-     },
-   },
  }
`;

exports[`Microsoft Word word2010-ie11-noequation-strippastedstyles-win81 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -229,138 +229,138 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bki6t",
-       "text": "•	Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "9n6j9",
-       "text": "•	Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "5nppq",
-       "text": "o	Nested bulleted list (1)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "d48ef",
-       "text": "	Nested bulleted list (2)",
-       "type": "unstyled",
+       "text": "Nested bulleted list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7njd6",
-       "text": "•	Bulleted list",
-       "type": "unstyled",
+       "text": "Bulleted list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "c0rb9",
-       "text": "1.	Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "cc5g7",
-       "text": "2.	Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "bl534",
-       "text": "a.	Nested numbered list (1)",
-       "type": "unstyled",
+       "text": "Nested numbered list (1)",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "co9er",
-       "text": "i.	Nested numbered list (2)",
-       "type": "unstyled",
+       "text": "Nested numbered list (2)",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2lmp2",
-       "text": "3.	Numbered list",
-       "type": "unstyled",
+       "text": "Numbered list",
+       "type": "ordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "e6gcf",
-       "text": " 	Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "8qvep",
-       "text": " 	Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 1,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "90gpr",
-       "text": "o	Nested star list (1)",
-       "type": "unstyled",
+       "text": "Nested star list (1)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
-       "depth": 0,
+       "depth": 2,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "2i8vt",
-       "text": "	Nested star list (2)",
-       "type": "unstyled",
+       "text": "Nested star list (2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "29k3p",
-       "text": " 	Star list",
-       "type": "unstyled",
+       "text": "Star list",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -445,20 +445,20 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "agq4r",
-       "text": "row 1 col 1	row 1 col 2",
+       "text": "row 1 col 1 row 1 col 2",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "33q1o",
-       "text": "row 2 col 1	row 2 col 2",
+       "text": "row 2 col 1 row 2 col 2",
        "type": "unstyled",
      },
      Object {
        "data": Object {},
        "depth": 0,
@@ -508,12 +508,12 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "fbn61",
-       "text": "•	Soft ",
-       "type": "unstyled",
+       "text": "Soft ",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -535,57 +535,57 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7tks9",
-       "text": "•	Double quote “test”",
-       "type": "unstyled",
+       "text": "Double quote “test”",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "3sfc4",
-       "text": "•	Single quote ‘test’",
-       "type": "unstyled",
+       "text": "Single quote ‘test’",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "4lnum",
-       "text": "•	Copyright © (( c ))",
-       "type": "unstyled",
+       "text": "Copyright © (( c ))",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "eidfj",
-       "text": "•	Fractions ½ (1 / 2)",
-       "type": "unstyled",
+       "text": "Fractions ½ (1 / 2)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "377ah",
-       "text": "•	Arrows   (-- >, < --)",
-       "type": "unstyled",
+       "text": "Arrows   (-- >, < --)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "7os5e",
-       "text": "•	Ellipsis … (. . .)",
-       "type": "unstyled",
+       "text": "Ellipsis … (. . .)",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
@@ -625,12 +625,12 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "flhao",
-       "text": "	",
-       "type": "unstyled",
+       "text": "",
+       "type": "unordered-list-item",
      },
      Object {
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
`;

exports[`Microsoft Word word2010-ie11-noequation-win81 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -4,11 +4,11 @@
        "data": Object {},
        "depth": 0,
        "entityRanges": Array [],
        "inlineStyleRanges": Array [],
        "key": "b4b1l",
-       "text": "Draft.js paste test document Subtitle Inline styles Unstyled, bold, italic, bold italic, strikethrough, monospace, unstyled, bold monospace Unstyled, underline, bigger, smaller, superscript, subscript Unstyled, red, text background, outline, SMALL CAPS, double strikethrough, unstyled Unstyled, light em, em, intense em, quote, intense quote, LIGHT REF, INTENSE REF, BOOK TITLE, unstyled Inline entities Unstyled, link, email link, tooltip link, internal link, frame link, comment  Unstyled, bold link comment  Text blocks Unstyled Unstyled centered Unstyled right-aligned Unstyled justify Unstyled indent Unstyled indent Unstyled indent Unstyled indent Unstyled indent Unstyled indent h1 - Heading one h2 - Heading two h3 - Heading three h4 - heading four h5 - heading five bold h6 - heading six h7 - heading seven h8 - heading eight h9 - heading nine •	Bulleted list •	Bulleted list o	Nested bulleted list (1) 	Nested bulleted list (2) •	Bulleted list 1.	Numbered list 2.	Numbered list a.	Nested numbered list (1) i.	Nested numbered list (2) 3.	Numbered list  	Star list  	Star list o	Nested star list (1) 	Nested star list (2)  	Star list Unstyled with borders Rich blocks Images Image   Caption Image with effects   Table row 1 col 1	row 1 col 2 row 2 col 1	row 2 col 2 Code block .media .img {     margin-right: 10px; } Misc •	Soft  line break Character replacements •	Double quote “test” •	Single quote ‘test’ •	Copyright © (( c )) •	Fractions ½ (1 / 2) •	Arrows   (-- >, < --) •	Ellipsis … (. . .) Emojis 🙂, 😨, 😎 Embeds Equation 	 Shape   SmartArt   Chart   WordArt",
+       "text": "Draft.js paste test document Subtitle Inline styles Unstyled, bold, italic, bold italic, strikethrough, monospace, unstyled, bold monospace Unstyled, underline, bigger, smaller, superscript, subscript Unstyled, red, text background, outline, SMALL CAPS, double strikethrough, unstyled Unstyled, light em, em, intense em, quote, intense quote, LIGHT REF, INTENSE REF, BOOK TITLE, unstyled Inline entities Unstyled, link, email link, tooltip link, internal link, frame link, comment  Unstyled, bold link comment  Text blocks Unstyled Unstyled centered Unstyled right-aligned Unstyled justify Unstyled indent Unstyled indent Unstyled indent Unstyled indent Unstyled indent Unstyled indent h1 - Heading one h2 - Heading two h3 - Heading three h4 - heading four h5 - heading five bold h6 - heading six h7 - heading seven h8 - heading eight h9 - heading nine • Bulleted list • Bulleted list o Nested bulleted list (1)  Nested bulleted list (2) • Bulleted list 1. Numbered list 2. Numbered list a. Nested numbered list (1) i. Nested numbered list (2) 3. Numbered list   Star list   Star list o Nested star list (1)  Nested star list (2)   Star list Unstyled with borders Rich blocks Images Image   Caption Image with effects   Table row 1 col 1 row 1 col 2 row 2 col 1 row 2 col 2 Code block .media .img {     margin-right: 10px; } Misc • Soft  line break Character replacements • Double quote “test” • Single quote ‘test’ • Copyright © (( c )) • Fractions ½ (1 / 2) • Arrows   (-- >, < --) • Ellipsis … (. . .) Emojis 🙂, 😨, 😎 Embeds Equation   Shape   SmartArt   Chart   WordArt",
        "type": "unstyled",
      },
    ],
    "entityMap": Object {},
  }
`;
